<resources>
    <string name="app_name">Mobile Programming Project</string>
    <string name="my_bids">My Bids</string>
    <string name="logout">Log Out</string>
    <string name="bids_desc">Select to see active and completed bids</string>
    <string name="notifs">Notification Settings</string>
    <string name="sales_desc">Select to see confirmed sales</string>
    <string name="my_sales">My Sales</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="Accountactivityex">Account Information Here</string>
    <string name="paymentdetails_desc">Add or update payment information</string>
    <string name="paymentdetails">Payment Information</string>
    <string name="salesact">Sales Information are here</string>
    <string name="bidsact">Bidding information here</string>
    <string name="mainact">Main Activity Here</string>
    <string name="paymentact">Payment Activity Here</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="Login">Log in</string>
    <string name="hintname">Enter your username</string>
    <string name="hintpassword">Enter your password</string>
    <string name="Accountmenu">Account</string>
    <string name="Settingsmenu">Settings</string>
    <string name="emailsignin">Enter your email</string>
    <string name="usernamesignup">Choose a username</string>
    <string name="passwordsignup">Choose a password</string>
    <string name="signupbtn">Sign up</string>
    <string name="successsignin">Signed Up Successfully</string>
    <string name="entercardnumber">Enter your credit card number</string>
    <string name="pay">Pay</string>
    <string name="checkout">Checkout</string>
    <string name="checkoutsuccess">Success!</string>
    <string name="checkoutfailed">Payment failed!</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="insert">INSERT</string>
    <string name="update">UPDATE</string>
    <string name="enter_the_item_price">Enter the item price</string>
    <string name="are_there_bids_on_this_product">Are there bids on this product</string>
    <string name="enter_the_item_name">Enter the item name</string>
    <string name="id_for_update">Id for update</string>
    <string name="item_name">Item name</string>
    <string name="price">Price</string>
    <string name="bids">Bids</string>
    <string name="database_refresh">Database Refresh</string>
    <string name="insert_or_update_database">Insert or Update Database</string>
    <string name="save_money_notification_title">Save more money with us!</string>
    <string name="new_product_notification">New products are here - don\'t miss out!</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="test_notification">Test Notification</string>


</resources>
