<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:text="@string/item_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="3dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/price"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/BidStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="3dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/bids"
                android:textStyle="normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>